--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Maria's Portfolio</title>
+    <style>
+    .loading {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      background-image: url(matrix-code.gif);
+      width: 100%;
+      height: 100vh;
+      background-size: cover;
+    }
+    </style>
   </head>
-  <body>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="container">
+        <div class="loading">
+        </div>
+      </div>
+    </div>
+   
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
