--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,24 +25,21 @@
     -->
     <title>Maria's Portfolio</title>
     <style>
-    .loading {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      background-image: url(matrix-code.gif);
-      width: 100%;
-      height: 100vh;
-      background-size: cover;
-    }
+      .loading {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        background-image: url(%PUBLIC_URL%/matrix-code.gif);
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+      }
     </style>
   </head>
-    
+  <body style="margin: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="loading" id="loading"></div>
     <div id="root">
-      <div class="container">
-        <div class="loading">
-        </div>
-      </div>
     </div>
    
     <!--
